log
Thu 24 Aug 2023 12:23:56 AM UTC: 
 tests:  0|6
total_score: 0/70
80dcd55
Thu 24 Aug 2023 12:36:10 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
Compilation failed
9b57c0d
Thu 24 Aug 2023 12:37:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   34 |   list=size=0;
      |        ^~~~
      |        dysize
list.c:34:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9c37861
Thu 24 Aug 2023 12:37:29 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: assignment to ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   35 |   list=size=0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
9cc30e0
Thu 24 Aug 2023 12:37:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list->size=0;
      |       ^~
list.c:32:7: error: unused variable ‘size’ [-Werror=unused-variable]
   32 |   int size;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
53b368f
Thu 24 Aug 2023 12:37:52 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list->size;
      |       ^~
list.c:32:7: error: unused variable ‘size’ [-Werror=unused-variable]
   32 |   int size=0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
d856e04
Thu 24 Aug 2023 12:38:04 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
5bef14d
Thu 24 Aug 2023 01:01:56 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   39 |   lista->current=lista->head;
      |   ^~~~~
      |   list
list.c:39:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6fd7703
Thu 24 Aug 2023 01:02:37 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:29: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   40 |     return &(list->current->dato);
      |                             ^~~~
      |                             data
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
923fbbb
Thu 24 Aug 2023 01:03:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:27: error: ‘Node’ has no member named ‘head’
   40 |     return &(list->current->head);
      |                           ^~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7a261e0
Thu 24 Aug 2023 01:04:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0b42a4b
Thu 24 Aug 2023 01:04:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a370dde
Thu 24 Aug 2023 01:04:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2e0bdd2
Thu 24 Aug 2023 01:05:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b9afd03
Thu 24 Aug 2023 01:08:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2ac201b
Thu 24 Aug 2023 01:13:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
934d84d
Thu 24 Aug 2023 02:34:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3ab972
Thu 24 Aug 2023 02:35:47 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b4f0a8d
Thu 24 Aug 2023 02:38:35 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
b16631b
Thu 24 Aug 2023 02:40:13 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
3b35c5f
